# meson-demo

./: Dockerfile  README.md  docker-compose.yml  meson.build
.github/workflows/: ci.yml
cli/: main.c  meson.build
lib/: foo.c  foo.h  meson.build
tests/: foo-lifecycle.c  meson.build
